* Contrast fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -479,7 +479,7 @@ p {
 
         color: #ffffff;
 
-        background-color: #E2A079;
+        background-color: #b26436;
         box-shadow: -4px 4px 0 0 #ffffff;
         transform: skewX(-10deg) translate(50%, -50%);
       }
